<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_difficulty_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.tyler.tictactoe.DifficultyLevel">

    <Button
        android:text="Easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:id="@+id/Easy"
        android:layout_alignParentTop="true"
        android:textSize="50sp"
        android:height="100dp"
        android:onClick="onEasyClick"/>

    <Button
        android:text="Hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Hard"
        android:layout_below="@+id/Easy"
        android:textSize="50sp"
        android:layout_marginTop="38dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:height="100dp"
        android:onClick="onHardClick"/>

    <Button
        android:text="Impossible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Impossible"
        android:layout_below="@+id/Hard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="38dp"
        android:textSize="50sp"
        android:height="100dp"
        android:onClick="onImpossibleClick"/>

    <TextView
        android:text="@string/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Easy"
        android:layout_centerHorizontal="true"
        android:id="@+id/easy_description"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Hard"
        android:layout_alignLeft="@+id/easy_description"
        android:layout_alignStart="@+id/easy_description"
        android:id="@+id/hard_description"
        android:textColor="@android:color/white"
        android:textAlignment="center" />

    <TextView
        android:text="@string/impossible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Impossible"
        android:layout_alignLeft="@+id/hard_description"
        android:layout_alignStart="@+id/hard_description"
        android:id="@+id/impossible_description"
        android:textColor="@android:color/white"
        android:textAlignment="center" />

    <TextView
        android:text="@string/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold|italic"
        android:typeface="normal"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
