<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_easy_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tyler.tictactoe.EasyGame">

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/button"
        android:layout_below="@+id/directions_step2"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:height="100dp"
        android:textColor="@color/buttonText"
        android:onClick="onButtonClick"
        android:background="@color/buttonBkgd" />

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_centerInParent="false"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true"
        android:height="100dp"
        android:onClick="onButtonClick"
        android:textColor="@color/buttonText"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/buttonBkgd"/>

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:id="@+id/button3"
        android:height="100dp"
        android:onClick="onButtonClick"
        android:textColor="@color/buttonText"
        android:background="@color/buttonBkgd"/>

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:id="@+id/button4"
        android:height="100dp"
        android:onClick="onButtonClick"
        android:textColor="@color/buttonText"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@color/buttonBkgd"/>

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:id="@+id/button5"
        android:height="100dp"
        android:onClick="onButtonClick"
        android:textColor="@color/buttonText"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@color/buttonBkgd"/>

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:id="@+id/button6"
        android:height="100dp"
        android:onClick="onButtonClick"
        android:textColor="@color/buttonText"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@color/buttonBkgd"/>

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:height="100dp"
        android:onClick="onButtonClick"
        android:textColor="@color/buttonText"
        android:background="@color/buttonBkgd"/>

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:id="@+id/button8"
        android:height="100dp"
        android:onClick="onButtonClick"
        android:textColor="@color/buttonText"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/buttonBkgd"/>

    <Button
        android:text=""
        android:textSize="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_toRightOf="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:id="@+id/button9"
        android:height="100dp"
        android:onClick="onButtonClick"
        android:textColor="@color/buttonText"
        android:background="@color/buttonBkgd"/>

    <TextView
        android:text="@string/easy_step_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/directions_step2"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic"
        android:layout_below="@+id/directions_step1"
        android:layout_alignLeft="@+id/directions_step1"
        android:layout_alignStart="@+id/directions_step1" />

    <TextView
        android:text="@string/easy_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="normal|bold"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_player_step_1"
        android:id="@+id/directions_step1"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:textStyle="normal|bold|italic"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
